# solutions

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
98-solutions/: index-by-company.md  index-by-topic.md
99-resources/scripts/: generate_indexes.py
tools/: anki_gen.py
