[project]
name = "solutions"
version = "0.0.0"
description = "Worked NeetCode 150 solutions (README / solution.py / cards.md per problem); cross-links into ref-dsa."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
python_files = ["solution.py", "test_*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]